# DawndewTale

./: .gitattributes  .gitignore  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
.github/workflows/: release.yml
scripts/: sync-version.ts
src/: App.tsx
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json
src-tauri/assets/models/bge-small/: README.md  config.json  tokenizer.json  tokenizer_config.json
src-tauri/assets/models/bge-small/onnx/: model.onnx  model_fp16.onnx  model_fp16.onnx_data  model_q4.onnx  model_q4.onnx_data  model_q4f16.onnx  model_q4f16.onnx_data  model_quantized.onnx  model_quantized.onnx_data
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 20260405153200_initial.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/commands/: embedding.rs  mod.rs  model.rs  pdf.rs
src/components/: DocumentDetail.tsx  DocumentList.tsx  PDFImportDialog.tsx  PDFViewer.tsx  RAGSearch.tsx
src/services/: chunkService.ts  database.ts  pdfService.ts
src/store/: documentStore.ts
src/types/: database.ts  tauri.ts
