[package]
name = "dawndewtale"
version = "0.2.0"
description = "A Tauri App"
authors = ["Istaroth"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "dawndewtale_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
kreuzberg = { version = "4.0.0-rc.11", features = ["pdf"] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-store = "2"
fastembed = "5.13.0"
tokio = { version = "1.51.0", features = ["full"] }
anyhow = "1.0.102"
thiserror = "2.0.18"
sqlx = { version = "0.8", features = ["runtime-tokio", "sqlite"] }
